
/**
 ******************  Script Configuration ******************
 */
buildscript {
    repositories {
        jcenter()
        gradlePluginPortal()

        maven {
            url "https://sandec.bintray.com/repo"
        }
    }

    dependencies {
        classpath 'com.sandec.jpro:jpro-plugin-gradle:2020.1.0-RC1'
        classpath 'org.openjfx:javafx-plugin:0.0.9'
    }
}


/**
 ******************  Java Configuration ******************
 */
apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'org.openjfx.javafxplugin'

compileJava {
    sourceCompatibility = 11
    targetCompatibility = 11
}

repositories {
    jcenter()
    mavenCentral()
}

javafx {
    version = '15'
    modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web' ]
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['src']
        }
    }
}


dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])

    compile 'com.jfoenix:jfoenix:9.0.10'

    compile 'de.jensd:fontawesomefx-controls:9.1.2'
    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
    compile 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-4'
    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-5'

    compile group: 'com.github.dhorions', name: 'boxable', version: '1.5'
    compile group: 'commons-codec', name: 'commons-codec', version: '1.13'
    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.4'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'

    compile group: 'org.apache.derby', name: 'derby', version: '10.12.1.1'
    compile group: 'org.apache.derby', name: 'derbyclient', version: '10.12.1.1'

    compile group: 'org.apache.pdfbox', name: 'fontbox', version: '2.0.4'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
    compile group: 'com.google.guava', name: 'guava', version: '21.0'

    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.1'

    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.3'
    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'

}


/**
 ******************  jpro Configuration ******************
 */
apply plugin: 'com.sandec.jpro'

run {
    jvmArgs = ["--add-opens",
               "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
               "--add-opens",
               "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
               "--add-opens",
               "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
               "--add-opens",
               "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
               "--add-opens",
               "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
               "--add-opens",
               "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
               "--add-opens",
               "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"]
}

/**
 * App Main Class
 */
mainClassName = 'library.assistant.ui.main.Main'
//mainClassName = 'com.jpro.hellojpro.HelloJProFXML'

/**
 * jpro settings
 */
jpro {
    // for debugging
    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

    JVMArgs << '-Xmx1000m'

    //jpro server port
    port = 8080

}